bases/wordpress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/component: frontend
  annotations:
    kube-score/ignore: >-
      container-security-context-readonlyrootfilesystem,
      container-security-context-user-group-id
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wordpress
      app.kubernetes.io/component: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wordpress
        app.kubernetes.io/component: frontend
    spec:
      securityContext:
        fsGroup: 33
        runAsGroup: 33
        runAsUser: 33
      containers:
        - name: wordpress
          image: wordpress:6.8.3-php8.2-apache
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          startupProbe:
            tcpSocket:
              port: http
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /wp-login.php
              port: http
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: wordpress-content
              mountPath: /var/www/html
            - name: php-config
              mountPath: /usr/local/etc/php/conf.d/uploads.ini
              subPath: uploads.ini
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
              ephemeral-storage: 256Mi
            limits:
              cpu: 1
              memory: 1Gi
              ephemeral-storage: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
      volumes:
        - name: wordpress-content
          persistentVolumeClaim:
            claimName: wordpress-content-pvc
        - name: wordpress-tmp
          emptyDir: {}
        - name: php-config
          configMap:
            name: wordpress-php-config
