bases/wordpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/component: frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
