bases/wordpress/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wordpress-allow-web
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: wordpress
      app.kubernetes.io/component: frontend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-allow-wordpress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mysql
      app.kubernetes.io/component: database
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: wordpress
              app.kubernetes.io/component: frontend
      ports:
        - protocol: TCP
          port: 3306
  egress:
    - {}
